# grove

./: README.md  index.html  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: index.html
grove/: Cargo.toml  build.rs  grove.rc
grove/src/: main.rs
grove_installer/: Cargo.toml  build.rs  grove.icns  grove_installer.icns  grove_installer.rc
grove_installer/src/: main.rs
grove_uninstaller/: Cargo.toml
grove_uninstaller/src/: main.rs
