[package]
name = "grove"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
tinyfiledialogs = "3.9"

[dependencies]
open = "5.1"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
chrono = "0.4"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
